--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk project.ext.compileSdk
 
     defaultConfig {
         applicationId "com.yunxian.android.scrolllinearlayout.demo"
-        minSdk 16
-        targetSdk 31
+        minSdk project.ext.minSdk
+        targetSdk project.ext.targetSdk
         versionCode 1
         versionName "1.0"
 
@@ -29,9 +29,9 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "androidx.appcompat:appcompat:${appcompat_v7}"
+    implementation "com.google.android.material:material:${material}"
+    implementation "androidx.constraintlayout:constraintlayout:${constraintlayout}"
 
     implementation project(":lib")
 }
