--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    apply from: rootProject.file('./gradle/version.gradle')
     repositories {
         mavenLocal()
         maven { url 'https://maven.aliyun.com/repository/public/' }
@@ -12,7 +13,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "com.android.tools.build:gradle:${gradle_plugin}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -31,6 +32,10 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/apache-snapshots' }
         mavenCentral()
     }
+}
+
+subprojects { project ->
+    apply from: rootProject.file('./gradle/version.gradle')
 }
 
 task clean(type: Delete) {
