--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -3,15 +3,14 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk project.ext.compileSdk
 
     defaultConfig {
-        minSdk 16
-        targetSdk 31
+        minSdk project.ext.minSdk
+        targetSdk project.ext.targetSdk
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
