--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -5,6 +5,8 @@ plugins {
 android {
     compileSdk project.ext.compileSdk
 
+    resourcePrefix 'scroll_'
+
     defaultConfig {
         minSdk project.ext.minSdk
         targetSdk project.ext.targetSdk
@@ -27,4 +29,5 @@ android {
 }
 
 dependencies {
+    implementation "androidx.core:core:${androidx_core}"
 }
