--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     apply from: rootProject.file('./gradle/version.gradle')
+    apply from: rootProject.file('./gradle/publish-ext.gradle')
     repositories {
         mavenLocal()
         maven { url 'https://maven.aliyun.com/repository/public/' }
