--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -31,3 +31,5 @@ android {
 dependencies {
     implementation "androidx.core:core:${androidx_core}"
 }
+
+apply from: rootProject.file('./gradle/publishAar.gradle')
